--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.16",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "oauth": "^0.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-oauth": "^0.0.1",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
